--- a/PROGRAM.cbp
+++ b/PROGRAM.cbp
@@ -32,10 +32,22 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="FileWithIncomes.cpp" />
+		<Unit filename="FileWithIncomes.h" />
+		<Unit filename="FileWithUsers.cpp" />
+		<Unit filename="FileWithUsers.h" />
+		<Unit filename="IncomeManager.cpp" />
+		<Unit filename="IncomeManager.h" />
+		<Unit filename="Incomes.cpp" />
+		<Unit filename="Incomes.h" />
+		<Unit filename="Markup.cpp" />
+		<Unit filename="Markup.h" />
 		<Unit filename="User.cpp" />
 		<Unit filename="User.h" />
 		<Unit filename="UserManager.cpp" />
 		<Unit filename="UserManager.h" />
+		<Unit filename="XMLFile.cpp" />
+		<Unit filename="XMLFile.h" />
 		<Unit filename="YourBudget.cpp" />
 		<Unit filename="YourBudget.h" />
 		<Unit filename="main.cpp" />
